Zadorotskas_Nikita_Stage_1 (#14)
* Stage 1

* fixes

* fixes

* fix in gradle

* Stage 1

* fixes

* fixes

* fix in gradle

* fixes in InMemoryDao

* fixed codeclimate

Co-authored-by: Artyom Drozdov <artyomcool2@gmail.com>