@@ -53,6 +53,3 @@ compileTestJava {
     options.compilerArgs += ["--add-modules", "jdk.incubator.foreign"]
 }
 
-test {
-    jvmArgs += ["--add-modules", "jdk.incubator.foreign"]
-}
